--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,3 @@
 v x.x
   - php Dockerfiles added (kv) 2020-02-08
+  - updated php74-apache entry point to dump env to /app/.env file upon container start (kv) 2020-02-12
