chmod +x nginx/bin/entrypoint.sh

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
 v x.x
   - php Dockerfiles added (kv) 2020-02-08
   - updated php74-apache entry point to dump env to /app/.env file upon container start (kv) 2020-02-12
+  - chmod +x nginx/bin/entrypoint.sh (kv) 2020-02-08
+  - added LICENSE file (kv) 2020-02-08
