--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,3 +4,4 @@ v x.x
   - chmod +x nginx/bin/entrypoint.sh (kv) 2020-02-08
   - added LICENSE file (kv) 2020-02-08
   - added postgres folder, inspired by https://github.com/mrts/docker-postgresql-multiple-databases (kv) 2020-02-18
+  - updated Apache config to AllowOverride (ak) 2020-03-20
