added docker files source link

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,3 +8,4 @@ v x.x
   - added nodejs Dockerfile (kv) 2020-03-26
   - added proto file generator Dockerfile (kv) 2020-03-28
   - added php71- docker files (kv) 2020-03-31
+  - added docker files source link (kv) 2020-03-31
