--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,3 +9,4 @@ v x.x
   - added proto file generator Dockerfile (kv) 2020-03-28
   - added php71- docker files (kv) 2020-03-31
   - added docker files source link (kv) 2020-03-31
+  - added rm -f ${ENV_FILE} for apache2 (kv) 2020-04-06
