--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,3 +15,4 @@ v x.x
   - added ability to overload timezone for PHP docker images (kv) 2020-05-13
   - added php7.[1|4]-imap (kv) 2020-05-17
   - increased memory limit for php7.1 apache2 (kv) 2020-05-19
+  - added buster with docker (kv) 2020-06-15
