--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,3 +17,4 @@ v x.x
   - increased memory limit for php7.1 apache2 (kv) 2020-05-19
   - added buster with docker (kv) 2020-06-15
   - updated number of apache workers (kv) 2020-07-08
+  - added mysql support for php74 images (kv) 2020-07-31
